--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,5 +1,5 @@
 {% extends '_layouts/base' %}
 
 {% block content %}
-    <h1 class="text-xl text-red-300 m-10">Hello Viget Craft CMS Starter</h1>
+    <h1 class="text-xl text-red-300 m-[20px]">Hello Viget Craft CMS Starter</h1>
 {% endblock %}
